# Streamvault

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  start.sh
backend/src/: db.rs  error.rs  main.rs  models.rs  streaming.rs
backend/src/handlers/: health.rs  mod.rs  stream.rs  upload.rs
benchmarks/: RESULTS.md  measure.sh  measure_ram.sh
docs/: ARCHITECTURE.md  DESIGN.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: app.css
frontend/src/components/: Toast.svelte  UploadZone.svelte  VideoGrid.svelte
frontend/src/lib/: types.ts
frontend/src/lib/components/: Toast.svelte  UploadZone.svelte  VideoGrid.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/watch/[token]/: +page.svelte
