[package]
name = "streamvault"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streamvault"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
anyhow = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
rand = "0.8"
